Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I9d866e1f94c129455348a75c2b22797958c99b17

--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -550,7 +550,7 @@
     <string name="private_space_fingerprint_title" msgid="5989254643211889931">"ফিংগাৰপ্ৰিণ্ট আনলক"</string>
     <string name="private_space_face_title" msgid="3290402865367663079">"ফে’চ আনলক"</string>
     <string name="private_space_biometric_summary" msgid="4403837276018724581">"ছেট আপ কৰিবলৈ টিপক"</string>
-    <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"ব্যক্তিগত স্পে’চৰ বাবে ফিংগাৰপ্ৰিণ্ট আনলক"</string>
+    <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"প্ৰাইভেট স্পে’চৰ বাবে ফিংগাৰপ্ৰিণ্ট আনলক"</string>
     <string name="private_space_face_unlock_title" msgid="462248384776453613">"ব্যক্তিগত স্পে’চৰ বাবে ফে’চ আনলক"</string>
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"আনলক কৰাৰ উপায়"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"ডিভাইচৰ স্ক্ৰীন লকৰ দৰে একেই"</string>
@@ -1161,8 +1161,8 @@
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"অন আছে - মুখাৱয়ব ভিত্তিক"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"মুখাৱয়ব চিনাক্তকৰণ"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"স্বয়ং-ঘূৰ্ণনৰ বিষয়ে অধিক জানক"</string>
-    <string name="screen_resolution_title" msgid="2690518693139811486">"স্ক্ৰীনৰ ৰিজ\'লিউছন"</string>
-    <string name="screen_resolution_option_high" msgid="2617496842852992853">"উচ্চ ৰিজ\'লিউছন"</string>
+    <string name="screen_resolution_title" msgid="2690518693139811486">"স্ক্ৰীনৰ ৰিজ\'লিউশ্বন"</string>
+    <string name="screen_resolution_option_high" msgid="2617496842852992853">"উচ্চ ৰিজ\'লিউশ্বন"</string>
     <string name="screen_resolution_option_full" msgid="2694003735219114186">"সম্পূৰ্ণ ৰিজ’লিউশ্বন"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"সম্পূৰ্ণ ৰিজ’লিউশ্বনে আপোনাৰ অধিক বেটাৰী ব্যৱহাৰ কৰে। আপোনাৰ ৰিজ’লিউশ্বন সলনি কৰিলে কিছুমান এপ্‌ ৰিষ্টাৰ্ট হ’ব পাৰে।"</string>
     <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"বাছনি কৰা হৈছে"</string>
@@ -3143,7 +3143,7 @@
     <string name="keywords_default_apps" msgid="4601664230800605416">"এপ্‌সমূহ, ডিফ\'ল্ট"</string>
     <string name="keywords_ignore_optimizations" msgid="8967142288569785145">"অপ্টিমাইজেশ্বন, ড\'জ, এপ্ ষ্টেণ্ডবাইক উপেক্ষা কৰক"</string>
     <string name="keywords_color_mode" msgid="1193896024705705826">"জীৱন্ত, RGB, sRGB, ৰং, প্ৰাকৃতিক, মানক"</string>
-    <string name="keywords_screen_resolution" msgid="6652125115386722875">"FHD, QHD, ৰিজ\'লিউছন, 1080p, 1440p"</string>
+    <string name="keywords_screen_resolution" msgid="6652125115386722875">"FHD, QHD, ৰিজ\'লিউশ্বন, 1080p, 1440p"</string>
     <string name="keywords_color_temperature" msgid="8159539138837118453">"ৰং, উষ্মতা, ডি৬৫, ডি৭৩, বগা, হালধীয়া, নীলা, উষ্ম, শীতল"</string>
     <string name="keywords_lockscreen" msgid="3656926961043485797">"আনলক কৰিবলৈ শ্লাইড কৰক, পাছৱৰ্ড, আৰ্হি, পিন"</string>
     <string name="keywords_app_pinning" msgid="1564144561464945019">"স্ক্ৰীন পিন কৰা"</string>
