--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -550,8 +550,8 @@
     <string name="private_space_fingerprint_title" msgid="5989254643211889931">"Barmaqla kilidaçma"</string>
     <string name="private_space_face_title" msgid="3290402865367663079">"Üzlə kilidaçma"</string>
     <string name="private_space_biometric_summary" msgid="4403837276018724581">"Ayarlamaq üçün toxunun"</string>
-    <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"Şəxsi sahə üçün barmaqla kilidaçma"</string>
-    <string name="private_space_face_unlock_title" msgid="462248384776453613">"Şəxsi sahə üçün üzlə kilidaçma"</string>
+    <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"Məxfi sahə üçün barmaqla kilidaçma"</string>
+    <string name="private_space_face_unlock_title" msgid="462248384776453613">"Məxfi sahə üçün üzlə kilidaçma"</string>
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"Kiliddən çıxarma üsulları"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"Cihazın ekran kilidi ilə eyni"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"Şəxsi sahə üçün yeni kilid seçilsin?"</string>
