--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -2000,7 +2000,7 @@
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Højere kontrast gør tekst, knapper og ikoner tydeligere. Vælg den kontrast, du foretrækker."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Visse apps understøtter ikke alle indstillinger for farve- og tekstkontrast"</string>
     <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Juster, hvordan farver og tekst ser ud mod baggrundsfarven på din skærm"</string>
-    <string name="color_contrast_preview" msgid="6791430227535363883">"Se forhåndsvisning"</string>
+    <string name="color_contrast_preview" msgid="6791430227535363883">"Forhåndsvisning"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helen, Adam"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 dage siden"</string>
     <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"Vil du følge op?"</string>
@@ -4355,7 +4355,7 @@
     <string name="autofill_keywords" msgid="8598763328489346438">"automatisk, udfyld, autofyld, adgangskode"</string>
     <string name="credman_keywords" msgid="8305600680836806170">"data, adgangsnøgle, adgangskode"</string>
     <string name="credman_autofill_keywords" msgid="701180623776848914">"automatisk, udfyldning, autofyld, data, adgangsnøgle, adgangskode"</string>
-    <string name="credman_button_change" msgid="4072629639218503790">"Ændring"</string>
+    <string name="credman_button_change" msgid="4072629639218503790">"Skift"</string>
     <string name="credman_button_open" msgid="7519871964170816850">"Åbn"</string>
     <string name="credman_app_list_preference_none" msgid="2509646651254971448">"Der er ikke valgt nogen"</string>
     <string name="autofill_confirmation_message" msgid="4888767934273494272">"&lt;b&gt;Sørg for, at du har tillid til denne app&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt; anvender indholdet af din skærm til at fastslå, hvad der kan udfyldes automatisk."</string>
