--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -340,7 +340,7 @@
     <string name="security_settings_face_enroll_improve_face_alert_body" msgid="2670118180411127323">"फ़ेस अनलॉक की सुविधा को दोबारा सेट अप करने के लिए, चेहरे का मौजूदा मॉडल मिटाएं.\n\nआपके चेहरे का मॉडल सुरक्षित रूप से हमेशा के लिए मिटा दिया जाएगा.\n\nइसके बाद, फ़ोन अनलॉक करने या किसी ऐप्लिकेशन में पहचान की पुष्टि के लिए, आपके पिन, पैटर्न या पासवर्ड की ज़रूरत होगी."</string>
     <string name="security_settings_face_enroll_improve_face_alert_body_fingerprint" msgid="2469599074650327489">"फ़ेस अनलॉक की सुविधा को दोबारा सेट अप करने के लिए, चेहरे का मौजूदा मॉडल मिटाएं.\n\nआपके चेहरे का मॉडल सुरक्षित रूप से हमेशा के लिए मिटा दिया जाएगा.\n\nइसके बाद, फ़ोन अनलॉक करने या किसी ऐप्लिकेशन में पहचान की पुष्टि करने के लिए, आपके फ़िंगरप्रिंट, पिन, पैटर्न या पासवर्ड की ज़रूरत होगी."</string>
     <string name="security_settings_face_settings_use_face_category" msgid="1638314154119800188">"फ़ेस अनलॉक की सुविधा का इस्तेमाल करके"</string>
-    <string name="security_settings_face_settings_preferences_category" msgid="7628929873407280453">"फ़ेस अनलॉक इस्तेमाल करते समय"</string>
+    <string name="security_settings_face_settings_preferences_category" msgid="7628929873407280453">"फ़ेस अनलॉक की सुविधा का इस्तेमाल करते समय"</string>
     <string name="security_settings_face_settings_require_attention" msgid="4395309855914391104">"आंखें खुली होनी चाहिए"</string>
     <string name="security_settings_face_settings_require_attention_details" msgid="2546230511769544074">"फ़ाेन अनलॉक करने के लिए, आंखें खुली होनी चाहिए"</string>
     <string name="security_settings_face_settings_require_confirmation" msgid="6603039421004198334">"हमेशा पुष्टि करना ज़रूरी है"</string>
@@ -550,8 +550,8 @@
     <string name="private_space_fingerprint_title" msgid="5989254643211889931">"फ़िंगरप्रिंट अनलॉक"</string>
     <string name="private_space_face_title" msgid="3290402865367663079">"फ़ेस अनलॉक"</string>
     <string name="private_space_biometric_summary" msgid="4403837276018724581">"सेट अप करने के लिए टैप करें"</string>
-    <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"प्राइवेट स्पेस के लिए फ़िंगरप्रिंट अनलॉक की सुविधा"</string>
-    <string name="private_space_face_unlock_title" msgid="462248384776453613">"प्राइवेट स्पेस के लिए फ़ेस अनलॉक की सुविधा"</string>
+    <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"प्राइवेट स्पेस के लिए, फ़िंगरप्रिंट अनलॉक की सुविधा"</string>
+    <string name="private_space_face_unlock_title" msgid="462248384776453613">"प्राइवेट स्पेस के लिए, फ़ेस अनलॉक की सुविधा"</string>
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"फ़ोन को अनलॉक करने के तरीके"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"वही जो डिवाइस का स्क्रीन लॉक है"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"प्राइवेट स्पेस के लिए नया लॉक चुनना है?"</string>
@@ -3218,7 +3218,7 @@
     <string name="notification_volume_content_description_vibrate_mode" msgid="6097212000507408288">"सूचना को म्यूट किया गया, सूचनाएं आने पर डिवाइस वाइब्रेट हाेगा"</string>
     <string name="volume_content_description_silent_mode" msgid="377680514551405754">"<xliff:g id="VOLUME_TYPE">%1$s</xliff:g> को म्यूट किया गया"</string>
     <string name="notification_volume_disabled_summary" msgid="8679988555852056079">"रिंग म्यूट होने की वजह से आवाज़ सुनाई नहीं दे रही"</string>
-    <string name="ringtone_title" msgid="3271453110387368088">"फ़ोन रिंगटोन"</string>
+    <string name="ringtone_title" msgid="3271453110387368088">"फ़ोन की रिंगटोन"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"सूचना की डिफ़ॉल्ट आवाज़"</string>
     <string name="notification_unknown_sound_title" msgid="1319708450698738980">"ऐप की ओर से दी जाने वाली ध्वनि"</string>
     <string name="notification_sound_default" msgid="8630353701915294299">"सूचना की डिफ़ॉल्ट आवाज़"</string>
@@ -3422,7 +3422,7 @@
     <string name="lock_screen_notifs_redact_work" msgid="3833920196569208430">"वर्क प्रोफ़ाइल की संवेदनशील सूचनाएं"</string>
     <string name="lock_screen_notifs_redact_work_summary" msgid="3238238380405430156">"स्क्रीन लॉक होने पर वर्क प्रोफ़ाइल का संवेदनशील कॉन्टेंट दिखाएं"</string>
     <string name="lock_screen_notifications_summary_show" msgid="6540443483088311328">"सभी सूचनाएं दिखाएं"</string>
-    <string name="lock_screen_notifications_summary_hide" msgid="7837303171531166789">"डिवाइस अनलॉक होने पर ही संवेदनशील कॉन्टेंट दिखाएं"</string>
+    <string name="lock_screen_notifications_summary_hide" msgid="7837303171531166789">"संवेदनशील सूचनाएं डिवाइस अनलॉक होने पर ही दिखाएं"</string>
     <string name="lock_screen_notifications_summary_disable" msgid="3388290397947365744">"कोई सूचना न दिखाएं"</string>
     <string name="lock_screen_notifications_interstitial_message" msgid="6326229471276829730">"आपको अपनी लॉक स्क्रीन पर क्या दिखाना है?"</string>
     <string name="lock_screen_notifications_interstitial_title" msgid="1360388192096354315">"लॉक स्क्रीन"</string>
