--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -65,7 +65,7 @@
     <string name="bluetooth_disconnect_title" msgid="4581951246357823044">"לנתק את המכשיר?"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"התאמה של מכשיר חדש"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"Bluetooth"</string>
-    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"החיבור יופעל שוב אוטומטית מחר"</string>
+    <string name="bluetooth_screen_auto_on_title" msgid="8496443490064988240">"יופעל שוב אוטומטית מחר"</string>
     <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"התאמה באוזן ימין"</string>
     <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"התאמה באוזן שמאל"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"התאמה באוזן השנייה"</string>
@@ -551,7 +551,7 @@
     <string name="private_space_face_title" msgid="3290402865367663079">"פתיחה ע\"י זיהוי הפנים"</string>
     <string name="private_space_biometric_summary" msgid="4403837276018724581">"אפשר להקיש כדי להגדיר"</string>
     <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"הגדרת ביטול הנעילה בטביעת אצבע למרחב הפרטי"</string>
-    <string name="private_space_face_unlock_title" msgid="462248384776453613">"הגדרת פתיחה ע\"י זיהוי הפנים למרחב הפרטי"</string>
+    <string name="private_space_face_unlock_title" msgid="462248384776453613">"הגדרה של פתיחת המרחב הפרטי על ידי זיהוי הפנים"</string>
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"דרכים לביטול הנעילה"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"זהה לנעילת המסך במכשיר"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"רוצה לבחור שיטת נעילה חדשה למרחב הפרטי?"</string>
@@ -645,12 +645,12 @@
     <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"בחירה של נעילת מסך"</string>
     <string name="lock_settings_picker_update_lock_title" msgid="536853138943415927">"בחירה של נעילת מסך חדשה"</string>
     <string name="lock_settings_picker_new_profile_lock_title" msgid="2270462215256413800">"נעילת אפליקציות לעבודה"</string>
-    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"בחירת נעילה חדשה לעבודה"</string>
+    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"בחירת נעילה חדשה לפרופיל העבודה"</string>
     <string name="lock_settings_picker_biometrics_added_security_message" msgid="1105247657304421299">"לשיפור האבטחה, מומלץ להגדיר שיטת גיבוי לנעילת המסך"</string>
     <string name="lock_settings_picker_biometric_message" msgid="2609666443527262781">"יש לבחור את שיטת הגיבוי לנעילת המסך"</string>
     <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"‏אם שכחת איך לבטל את נעילת המסך, מנהל ה-IT לא יוכל לאפס אותה."</string>
     <string name="lock_settings_picker_admin_restricted_personal_message_action" msgid="5956615234246626264">"אפשר להגדיר נעילה נפרדת לפרופיל העבודה"</string>
-    <string name="lock_settings_picker_profile_message" msgid="9142379549980873478">"‏שכחת את הנעילה הזו? עליך לבקש ממנהל ה-IT לאפס אותה"</string>
+    <string name="lock_settings_picker_profile_message" msgid="9142379549980873478">"‏שכחת את הנעילה הזו? צריך לבקש מאדמין ב-IT לאפס אותה"</string>
     <string name="setup_lock_settings_options_button_label" msgid="6098297461618298505">"אפשרויות לנעילת המסך"</string>
     <string name="setup_lock_settings_options_dialog_title" msgid="7985107300517468569">"אפשרויות לנעילת המסך"</string>
     <string name="lock_screen_auto_pin_confirm_title" msgid="3012128112186088375">"ביטול נעילה באמצעות אישור אוטומטי"</string>
@@ -811,9 +811,9 @@
     <string name="bluetooth_device_context_disconnect" msgid="4464167389972513232">"התנתקות"</string>
     <string name="bluetooth_device_context_pair_connect" msgid="2406032703622371826">"התאמה וחיבור"</string>
     <string name="bluetooth_empty_list_bluetooth_off" msgid="7326727272747345476">"‏עם Bluetooth מופעל, המכשיר יכול לתקשר עם מכשירי Bluetooth אחרים בקרבת מקום"</string>
-    <string name="bluetooth_empty_list_bluetooth_off_auto_on_available" msgid="5833847615853525971">"‏עם Bluetooth מופעל, המכשיר יכול לתקשר עם מכשירי Bluetooth אחרים בקרבת מקום. תכונות כמו \'שיתוף מהיר\', \'איפה המכשיר שלי\' ומיקום המכשיר משתמשות בחיבור Bluetooth."</string>
+    <string name="bluetooth_empty_list_bluetooth_off_auto_on_available" msgid="5833847615853525971">"‏כשה-Bluetooth מופעל, המכשיר יכול לתקשר עם מכשירי Bluetooth אחרים בקרבת מקום. תכונות כמו \'שיתוף מהיר\', \'איפה המכשיר שלי\' ומיקום המכשיר מתבססות על Bluetooth."</string>
     <string name="bluetooth_scanning_on_info_message" msgid="786648535600075223">"‏כשה-Bluetooth מופעל, המכשיר יכול לתקשר עם מכשירי Bluetooth אחרים שנמצאים בקרבת מקום.\n\nכדי לשפר את חוויית השימוש במכשיר, אפליקציות ושירותים יכולים לסרוק אחר מכשירים בקרבת מקום בכל שלב, גם כשה-Bluetooth כבוי. אפשר להשתמש בכך, למשל, כדי לשפר תכונות ושירותים שמבוססים על מיקום. ניתן לשנות זאת בהגדרות הסריקה של Bluetooth‏."</string>
-    <string name="bluetooth_scanning_on_info_message_auto_on_available" msgid="5047787966768730069">"‏עם Bluetooth מופעל, המכשיר יכול לתקשר עם מכשירי Bluetooth אחרים בקרבת מקום. תכונות כמו \'שיתוף מהיר\', \'איפה המכשיר שלי\' ומיקום המכשיר משתמשות בחיבור Bluetooth‏.\n\nאפליקציות ושירותים עדיין יכולים לבצע סריקה של מכשירים בקרבת מקום בכל שלב, גם כשחיבור ה-Bluetooth מושבת. אפשר להשתמש באפשרות הזו, לדוגמה, כדי לשפר תכונות ושירותים מבוססי מיקום. ניתן לשנות את זה בהגדרות של סריקת Bluetooth."</string>
+    <string name="bluetooth_scanning_on_info_message_auto_on_available" msgid="5047787966768730069">"‏כש-Bluetooth מופעל, המכשיר יכול לתקשר עם מכשירי Bluetooth אחרים בקרבת מקום. תכונות כמו \'שיתוף מהיר\', \'איפה המכשיר שלי\' ומיקום המכשיר מתבססות על Bluetooth‏.\n\nאפליקציות ושירותים עדיין יכולים לבצע סריקה של מכשירים בקרבת מקום בכל שלב, גם כשה-Bluetooth מושבת. אפשר להשתמש באפשרות הזו, לדוגמה, כדי לשפר תכונות ושירותים מבוססי מיקום. ניתן לשנות את זה בהגדרות של סריקת Bluetooth."</string>
     <string name="bluetooth_scan_change" msgid="1744636222637390367">"שינוי"</string>
     <string name="device_details_title" msgid="1155622417516195481">"פרטי המכשיר"</string>
     <string name="bluetooth_device_keyboard_settings_preference_title" msgid="3411693160917620519">"הגדרות מקלדת"</string>
@@ -1707,7 +1707,7 @@
     <string name="forgot_password_text" msgid="2583194470767613163">"ניתן לקבל ממנו עזרה באיפוס קוד האימות, קו ביטול הנעילה או הסיסמה"</string>
     <string name="advanced_settings" msgid="2368905204839169094">"הגדרות מתקדמות"</string>
     <string name="advanced_settings_summary" msgid="1823765348195530035">"הפעלת אפשרויות הגדרה נוספות."</string>
-    <string name="application_info_label" msgid="1015706497694165866">"פרטי אפליקציה"</string>
+    <string name="application_info_label" msgid="1015706497694165866">"פרטי האפליקציה"</string>
     <string name="storage_label" msgid="2522307545547515733">"אחסון"</string>
     <string name="auto_launch_label" msgid="4069860409309364872">"פתיחה כברירת מחדל"</string>
     <string name="auto_launch_label_generic" msgid="5033137408273064599">"ברירות מחדל"</string>
