--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -1997,14 +1997,14 @@
     <string name="display_category_title" msgid="6638191682294461408">"បង្ហាញ"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"ពណ៌ និងចលនា"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"កម្រិតរំលេចពណ៌"</string>
-    <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"កម្រិតពណ៌កាន់តែខ្ពស់ធ្វើឱ្យអក្សរ ប៊ូតុង និងរូបតំណាងកាន់តែលេចធ្លោ។ សូមជ្រើសរើសកម្រិតពណ៌ដែលមើលទៅល្អបំផុតសម្រាប់អ្នក។"</string>
+    <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"កម្រិតរំលេចពណ៌កាន់តែខ្ពស់ធ្វើឱ្យអក្សរ ប៊ូតុង និងរូបតំណាងកាន់តែលេចធ្លោ។ សូមជ្រើសរើសកម្រិតរំលេចពណ៌ដែលមើលទៅល្អបំផុតសម្រាប់អ្នក។"</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"កម្មវិធីមួយចំនួនប្រហែលជាមិនអាចប្រើការកំណត់កម្រិតពណ៌ និងកម្រិតរំលេចពណ៌អក្សរទាំងអស់បានទេ"</string>
     <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"កែតម្រូវលក្ខណៈពណ៌ និងអក្សរធៀបនឹងពណ៌ផ្ទៃខាងក្រោយរបស់អេក្រង់អ្នក"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"មើលសាកល្បង"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helen, Adam"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 ថ្ងៃមុន"</string>
     <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"ទាក់ទងបន្តឬ?"</string>
-    <string name="color_contrast_preview_email_title" msgid="198712116139754823">"របាយការណ៍អំពីការធ្វើដំណើរបែបធុរកិច្ច"</string>
+    <string name="color_contrast_preview_email_title" msgid="198712116139754823">"របាយការណ៍អំពីដំណើរធុរកិច្ច"</string>
     <string name="color_contrast_preview_email_body" msgid="4139331665325624199">"សម្រាប់ជំនួយបន្ថែម សូមទាក់ទងមក\nខ្ញុំផ្ទាល់ ឬ Helen។ របាយការណ៍នេះនឹង"</string>
     <string name="color_contrast_preview_email_attachment_name" msgid="852407311884814746">"Client Expenses"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"ធ្វើឱ្យអេក្រង់ងងឹតជាងមុន"</string>
@@ -4841,7 +4841,7 @@
     <string name="default_active_sim_calls" msgid="2390973682556353558">"ការហៅទូរសព្ទ"</string>
     <string name="default_active_sim_sms" msgid="8041498593025994921">"SMS"</string>
     <string name="default_active_sim_mobile_data" msgid="6798083892814045301">"ទិន្នន័យ​ទូរសព្ទចល័ត"</string>
-    <string name="wifi_scan_notify_message" msgid="1331238142061476869">"ដើម្បីកែលម្អបទពិសោធន៍ប្រើប្រាស់ឧបករណ៍ កម្មវិធី និង​សេវាកម្ម​នៅតែ​អាច​ស្កេនរក​បណ្តាញ Wi-Fi បានគ្រប់ពេល ទោះបីជានៅពេលបិទ Wi-Fi ក៏ដោយ។ សកម្មភាពនេះអាចត្រូវបានប្រើដើម្បីកែលម្អមុខងារ និងសេវាកម្មដែលផ្អែកលើទីតាំងជាដើម។ អ្នកអាចប្ដូរវាបាននៅក្នុងការកំណត់ការស្កេន Wi‑Fi។"</string>
+    <string name="wifi_scan_notify_message" msgid="1331238142061476869">"ដើម្បីកែលម្អបទពិសោធប្រើប្រាស់ឧបករណ៍ កម្មវិធី និង​សេវាកម្ម​នៅតែ​អាច​ស្កេនរក​បណ្តាញ Wi-Fi បានគ្រប់ពេល ទោះបីជានៅពេលបិទ Wi-Fi ក៏ដោយ។ សកម្មភាពនេះអាចត្រូវបានប្រើដើម្បីកែលម្អមុខងារ និងសេវាកម្មដែលផ្អែកលើទីតាំងជាដើម។ អ្នកអាចប្ដូរវាបាននៅក្នុងការកំណត់ការស្កេន Wi‑Fi។"</string>
     <string name="wifi_scan_change" msgid="8438320311511852918">"ផ្លាស់ប្ដូរ"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"បានភ្ជាប់"</string>
