--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -551,7 +551,7 @@
     <string name="private_space_face_title" msgid="3290402865367663079">"Rozpoznawanie twarzy"</string>
     <string name="private_space_biometric_summary" msgid="4403837276018724581">"Kliknij, aby skonfigurować"</string>
     <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"Odblokowywanie przestrzeni prywatnej odciskiem palca"</string>
-    <string name="private_space_face_unlock_title" msgid="462248384776453613">"Rozpoznawanie twarzy na potrzeby przestrzeni prywatnej"</string>
+    <string name="private_space_face_unlock_title" msgid="462248384776453613">"Odblokowywanie przestrzeni prywatnej rozpoznawaniem twarzy"</string>
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"Sposoby odblokowywania"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"Taka sama jak blokada ekranu urządzenia"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"Wybrać nową blokadę dla przestrzeni prywatnej?"</string>
@@ -2143,7 +2143,7 @@
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"Nieprzezroczyste"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"Tekst o dużym kontraście"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"Zmień kolor tekstu na czarny lub biały. Spowoduje to ustawienie maksymalnego kontrastu względem tła."</string>
-    <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"Zmaksymalizuj kontrast tekstu"</string>
+    <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"Maksymalizuj kontrast tekstu"</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_summary" msgid="5493999083693403489">"Zmień kolor tekstu na czarny lub biały. Spowoduje to zwiększenie kontrastu względem tła."</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"Automatyczna aktualizacja powiększenia ekranu"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"Aktualizuj powiększenie ekranu przy zmianie aplikacji"</string>
