--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -570,7 +570,7 @@
     <string name="privatespace_hide_off_summary" msgid="7227778747159633671">"முடக்கப்பட்டுள்ளது"</string>
     <string name="privatespace_hide_on_summary" msgid="6136704537527640183">"இயக்கப்பட்டுள்ளது"</string>
     <string name="private_space_category_system" msgid="1286843321867285700">"சிஸ்டம்"</string>
-    <string name="private_space_delete_title" msgid="636873505724100006">"ரகசிய இடத்தை நீக்குதல்"</string>
+    <string name="private_space_delete_title" msgid="636873505724100006">"ரகசிய இடத்தை நீக்கு"</string>
     <string name="private_space_delete_header" msgid="4594429153176776184">"ரகசிய இடத்தை நீக்க வேண்டுமா?"</string>
     <string name="private_space_delete_summary" msgid="3344372988408565545">"சாதனத்திலிருந்து உங்கள் ரகசிய இடம் அகற்றப்படும். அனைத்துத் தனிப்பட்ட ஆப்ஸும் தரவும் நீக்கப்படும். இதைச் செயல்தவிர்க்க முடியாது."</string>
     <string name="private_space_accounts" msgid="1078277762792056395">"உங்கள் ரகசிய இடத்தில் இருந்து பின்வரும் கணக்குகள் அகற்றப்படும்:"</string>
