--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -3656,7 +3656,7 @@
     <string name="zen_mode_alarms_list" msgid="334782233067365405">"сигнали будильників"</string>
     <string name="zen_mode_alarms_list_first" msgid="2780418316613576610">"Будильники"</string>
     <string name="zen_mode_media" msgid="885017672250984735">"Звуки мультимедіа"</string>
-    <string name="zen_mode_media_summary" msgid="7174081803853351461">"Звуки з відео, ігор та інших медіафайлів"</string>
+    <string name="zen_mode_media_summary" msgid="7174081803853351461">"Звуки з відео, ігор і інших медіафайлів"</string>
     <string name="zen_mode_media_list" msgid="2006413476596092020">"мультимедіа"</string>
     <string name="zen_mode_media_list_first" msgid="7824427062528618442">"Медіа"</string>
     <string name="zen_mode_system" msgid="7301665021634204942">"Звуки під час дотику"</string>
