--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -4977,13 +4977,13 @@
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Megerősítés"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Előnézet"</string>
-    <string name="dream_picker_category" msgid="7726447836872744867">"Képernyővédő kiválasztása"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"Képernyőkímélő kiválasztása"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"További információk megjelenítése"</string>
     <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"A pontos idő, az időjárás vagy más információk megjelenítése a képernyőkímélőn"</string>
     <string name="dream_home_controls_toggle_title" msgid="706799741564479248">"Otthonvezérlők megjelenítése"</string>
     <string name="dream_home_controls_toggle_summary" msgid="4102519907917430579">"Otthonvezérlők megjelenítése a képernyőkímélőn"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"További beállítások"</string>
-    <string name="dream_setup_title" msgid="2458303874255396142">"Képernyővédő kiválasztása"</string>
+    <string name="dream_setup_title" msgid="2458303874255396142">"Képernyőkímélő kiválasztása"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Kiválaszthatja, hogy mi legyen látható a képernyőn, amikor a táblagép dokkolt állapotban van. Előfordulhat, hogy az eszköz több energiát használ, ha a képernyőkímélő be van kapcsolva."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"Szerkesztés"</string>
     <string name="customize_button_description" msgid="7440248477266126231">"<xliff:g id="SCREENSAVER_NAME">%1$s</xliff:g> személyre szabása"</string>
