--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -550,8 +550,8 @@
     <string name="private_space_fingerprint_title" msgid="5989254643211889931">"Buka Kunci Cap Jari"</string>
     <string name="private_space_face_title" msgid="3290402865367663079">"Buka Kunci Wajah"</string>
     <string name="private_space_biometric_summary" msgid="4403837276018724581">"Ketik untuk membuat persediaan"</string>
-    <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"Buka Kunci Cap Jari untuk ruang peribadi"</string>
-    <string name="private_space_face_unlock_title" msgid="462248384776453613">"Buka Kunci Wajah untuk ruang peribadi"</string>
+    <string name="private_space_fingerprint_unlock_title" msgid="3614016453395789051">"Buka Kunci Cap Jari untuk ruang privasi"</string>
+    <string name="private_space_face_unlock_title" msgid="462248384776453613">"Buka Kunci Wajah untuk ruang privasi"</string>
     <string name="private_space_category_ways_to_unlock" msgid="4356631225316950046">"Cara membuka kunci"</string>
     <string name="private_space_screen_lock_summary" msgid="394837965365561070">"Sama seperti kunci skrin peranti"</string>
     <string name="private_space_new_lock_title" msgid="9056139964133004094">"Pilih kunci baharu untuk ruang privasi?"</string>
@@ -645,7 +645,7 @@
     <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"Pilih kunci skrin"</string>
     <string name="lock_settings_picker_update_lock_title" msgid="536853138943415927">"Pilih kunci skrin baharu"</string>
     <string name="lock_settings_picker_new_profile_lock_title" msgid="2270462215256413800">"Pilih kunci untuk apl kerja"</string>
-    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"Pilih kunci kerja baharu"</string>
+    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"Pilih kunci profil kerja baharu"</string>
     <string name="lock_settings_picker_biometrics_added_security_message" msgid="1105247657304421299">"Untuk keselamatan tambahan, tetapkan kunci skrin sandaran"</string>
     <string name="lock_settings_picker_biometric_message" msgid="2609666443527262781">"Pilih kaedah kunci skrin sandaran anda"</string>
     <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"Pentadbir IT tak dapat menetapkan semula kunci skrin jika anda terlupa."</string>
@@ -1591,7 +1591,7 @@
     <string name="settings_license_activity_loading" msgid="1653151990366578827">"Memuatkan..."</string>
     <string name="settings_safetylegal_activity_loading" msgid="1757860124583063395">"Memuatkan..."</string>
     <string name="lockpassword_choose_your_password_header" msgid="2407205113298094824">"Tetapkan kata laluan"</string>
-    <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"Tetapkan kata laluan kerja"</string>
+    <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"Tetapkan kata laluan profil kerja"</string>
     <string name="lockpassword_choose_your_pin_header" msgid="7754265746504679473">"Tetapkan PIN"</string>
     <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"Tetapkan PIN kerja"</string>
     <string name="lockpassword_choose_your_pattern_header" msgid="5674909390779586252">"Tetapkan corak"</string>
@@ -1602,12 +1602,12 @@
     <string name="lockpassword_choose_your_pin_message" msgid="7230665212172041837">"Untuk keselamatan, tetapkan PIN"</string>
     <string name="lockpassword_choose_your_pin_header_for_fingerprint" msgid="2783879743691792556">"Buat PIN untuk guna cap jari"</string>
     <string name="lockpassword_confirm_your_password_header" msgid="6132312814563023990">"Masukkan semula kata laluan anda"</string>
-    <string name="lockpassword_reenter_your_profile_password_header" msgid="3812040127714827685">"Masukkan semula kata laluan kerja anda"</string>
+    <string name="lockpassword_reenter_your_profile_password_header" msgid="3812040127714827685">"Masukkan semula kata laluan profil kerja"</string>
     <string name="lockpassword_confirm_your_work_password_header" msgid="4647071231702288305">"Masukkan kata laluan kerja anda"</string>
     <string name="lockpassword_confirm_your_pattern_header" msgid="4037701363240138651">"Sahkan corak anda"</string>
     <string name="lockpassword_confirm_your_work_pattern_header" msgid="2668883108969165844">"Masukkan corak kerja anda"</string>
     <string name="lockpassword_confirm_your_pin_header" msgid="2241722970567131308">"Masukkan semula PIN"</string>
-    <string name="lockpassword_reenter_your_profile_pin_header" msgid="2890233614560435538">"Masukkan semula PIN kerja anda"</string>
+    <string name="lockpassword_reenter_your_profile_pin_header" msgid="2890233614560435538">"Masukkan semula PIN profil kerja"</string>
     <string name="lockpassword_confirm_your_work_pin_header" msgid="4229765521391960255">"Masukkan PIN kerja anda"</string>
     <string name="lockpassword_confirm_passwords_dont_match" msgid="2100071354970605232">"Kata laluan tidak sepadan"</string>
     <string name="lockpassword_confirm_pins_dont_match" msgid="1103699575489401030">"PIN tidak sepadan"</string>
@@ -1998,7 +1998,7 @@
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Warna dan gerakan"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Kontras warna"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Kontras yang lebih tinggi menjadikan teks, butang dan ikon lebih menonjol. Pilih kontras yang paling sesuai untuk anda."</string>
-    <string name="color_contrast_note" msgid="7592686603372566198">"Sesetengah apl mungkin tidak menyokong semua tetapan kontras warna dan teks"</string>
+    <string name="color_contrast_note" msgid="7592686603372566198">"Sesetengah apl mungkin menyokong hanya sebahagian tetapan kontras warna dan teks"</string>
     <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Laraskan warna dan teks dengan warna latar skrin anda"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Pratonton"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helen, Adam"</string>
