--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -645,7 +645,7 @@
     <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"Scherm­vergrendeling kiezen"</string>
     <string name="lock_settings_picker_update_lock_title" msgid="536853138943415927">"Nieuwe scherm­vergrendeling"</string>
     <string name="lock_settings_picker_new_profile_lock_title" msgid="2270462215256413800">"Vergrendeling werk-apps kiezen"</string>
-    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"Nieuwe vergrendeling werk-apps kiezen"</string>
+    <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"Nieuwe vergrendeling voor werk-apps kiezen"</string>
     <string name="lock_settings_picker_biometrics_added_security_message" msgid="1105247657304421299">"Stel een extra schermvergrendeling in voor betere beveiliging"</string>
     <string name="lock_settings_picker_biometric_message" msgid="2609666443527262781">"Kies een extra methode voor schermvergrendeling"</string>
     <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"Als je je schermvergrendeling vergeet, kan je IT-beheerder deze niet resetten."</string>
@@ -1591,9 +1591,9 @@
     <string name="settings_license_activity_loading" msgid="1653151990366578827">"Laden..."</string>
     <string name="settings_safetylegal_activity_loading" msgid="1757860124583063395">"Laden..."</string>
     <string name="lockpassword_choose_your_password_header" msgid="2407205113298094824">"Stel een wachtwoord in"</string>
-    <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"Een werkwachtwoord instellen"</string>
+    <string name="lockpassword_choose_your_profile_password_header" msgid="7038997227611893312">"Wachtwoord voor werkprofiel instellen"</string>
     <string name="lockpassword_choose_your_pin_header" msgid="7754265746504679473">"Stel een pincode in"</string>
-    <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"Een werkpincode instellen"</string>
+    <string name="lockpassword_choose_your_profile_pin_header" msgid="4581749963670819048">"Pincode voor werkprofiel instellen"</string>
     <string name="lockpassword_choose_your_pattern_header" msgid="5674909390779586252">"Stel een patroon in"</string>
     <string name="lockpassword_choose_your_pattern_description" msgid="6808109256008481046">"Stel voor extra beveiliging een patroon in om het apparaat te ontgrendelen"</string>
     <string name="lockpassword_choose_your_profile_pattern_header" msgid="3101811498330756641">"Stel een patroon in voor je werkprofiel"</string>
@@ -1602,12 +1602,12 @@
     <string name="lockpassword_choose_your_pin_message" msgid="7230665212172041837">"Stel een pincode in voor betere beveiliging"</string>
     <string name="lockpassword_choose_your_pin_header_for_fingerprint" msgid="2783879743691792556">"Pincode bij gebruik van vingerafdruk"</string>
     <string name="lockpassword_confirm_your_password_header" msgid="6132312814563023990">"Voer je wachtwoord opnieuw in"</string>
-    <string name="lockpassword_reenter_your_profile_password_header" msgid="3812040127714827685">"Je werkwachtwoord opnieuw invullen"</string>
+    <string name="lockpassword_reenter_your_profile_password_header" msgid="3812040127714827685">"Wachtwoord werkprofiel opnieuw invoeren"</string>
     <string name="lockpassword_confirm_your_work_password_header" msgid="4647071231702288305">"Voer het wachtwoord van je werkprofiel in"</string>
     <string name="lockpassword_confirm_your_pattern_header" msgid="4037701363240138651">"Bevestig je patroon"</string>
     <string name="lockpassword_confirm_your_work_pattern_header" msgid="2668883108969165844">"Teken het patroon van je werkprofiel"</string>
     <string name="lockpassword_confirm_your_pin_header" msgid="2241722970567131308">"Voer je pincode opnieuw in"</string>
-    <string name="lockpassword_reenter_your_profile_pin_header" msgid="2890233614560435538">"Je werkpincode opnieuw invullen"</string>
+    <string name="lockpassword_reenter_your_profile_pin_header" msgid="2890233614560435538">"Pincode van werkprofiel opnieuw invoeren"</string>
     <string name="lockpassword_confirm_your_work_pin_header" msgid="4229765521391960255">"Voer de pincode van je werkprofiel in"</string>
     <string name="lockpassword_confirm_passwords_dont_match" msgid="2100071354970605232">"Wachtwoorden komen niet overeen"</string>
     <string name="lockpassword_confirm_pins_dont_match" msgid="1103699575489401030">"Pincodes komen niet overeen"</string>
@@ -2006,7 +2006,7 @@
     <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"Opvolgen?"</string>
     <string name="color_contrast_preview_email_title" msgid="198712116139754823">"Verslag van zakenreis"</string>
     <string name="color_contrast_preview_email_body" msgid="4139331665325624199">"Neem voor meer hulp contact op met \nmij of Helen. Dit rapport wordt"</string>
-    <string name="color_contrast_preview_email_attachment_name" msgid="852407311884814746">"Klantuitgaven"</string>
+    <string name="color_contrast_preview_email_attachment_name" msgid="852407311884814746">"Uitgaven van klant"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"Scherm donkerder maken"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"Interactieopties"</string>
     <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"Bedienings­elementen voor timing"</string>
