--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -581,13 +581,13 @@
     <string name="private_space_delete_failed" msgid="7705795653796174741">"ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਨੂੰ ਮਿਟਾਇਆ ਨਹੀਂ ਜਾ ਸਕਿਆ"</string>
     <string name="private_space_unlocked" msgid="9091600948712932046">"ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਅਣਲਾਕ ਕੀਤਾ ਗਿਆ"</string>
     <string name="no_device_lock_title" msgid="1078223464721029954">"ਸਕ੍ਰੀਨ ਲਾਕ ਸੈੱਟ ਕਰੋ"</string>
-    <string name="no_device_lock_summary" msgid="7436025227616244687">"ਆਪਣੀ ਨਿੱਜੀ ਸਪੇਸ ਵਰਤਣ ਲਈ, ਇਸ ਡੀਵਾਈਸ \'ਤੇ ਸਕ੍ਰੀਨ ਲਾਕ ਸੈੱਟ ਕਰੋ"</string>
+    <string name="no_device_lock_summary" msgid="7436025227616244687">"ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਵਰਤਣ ਲਈ, ਇਸ ਡੀਵਾਈਸ \'ਤੇ ਸਕ੍ਰੀਨ ਲਾਕ ਸੈੱਟ ਕਰੋ"</string>
     <string name="no_device_lock_action_label" msgid="2640487005629001288">"ਸਕ੍ਰੀਨ ਲਾਕ ਸੈੱਟ ਕਰੋ"</string>
     <string name="no_device_lock_cancel" msgid="4412602160321228863">"ਰੱਦ ਕਰੋ"</string>
     <string name="private_space_cancel_label" msgid="379259667396956886">"ਰੱਦ ਕਰੋ"</string>
     <string name="private_space_setup_button_label" msgid="2094882154623560585">"ਸੈੱਟਅੱਪ ਕਰੋ"</string>
     <string name="private_space_setup_title" msgid="2272968244329821450">"ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ"</string>
-    <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"ਨਿੱਜੀ ਐਪਾਂ ਨੂੰ ਕਿਸੇ ਵੱਖਰੀ ਸਪੇਸ \'ਤੇ ਲੁਕਾਓ ਜਾਂ ਲਾਕ ਕਰੋ। ਵਾਧੂ ਸੁਰੱਖਿਆ ਲਈ ਸਮਰਪਿਤ Google ਖਾਤਾ ਵਰਤੋ।"</string>
+    <string name="private_space_hide_apps_summary" msgid="4418722947376042418">"ਪ੍ਰਾਈਵੇਟ ਐਪਾਂ ਨੂੰ ਕਿਸੇ ਵੱਖਰੀ ਸਪੇਸ \'ਤੇ ਲੁਕਾਓ ਜਾਂ ਲਾਕ ਕਰੋ। ਵਾਧੂ ਸੁਰੱਖਿਆ ਲਈ ਸਮਰਪਿਤ Google ਖਾਤਾ ਵਰਤੋ।"</string>
     <string name="private_space_setup_sub_header" msgid="5454598292017819146">"ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਦਾ ਸੈੱਟਅੱਪ ਕਰੋ"</string>
     <string name="private_space_separate_account_text" msgid="4492251315012955548"><b>"ਆਪਣੀ ਸਪੇਸ ਲਈ Google ਖਾਤਾ ਵਰਤੋਂ"</b>\n"ਸਮਰਪਿਤ ਖਾਤਾ ਵਰਤਣ ਨਾਲ ਸਿੰਕ ਕੀਤੀਆਂ ਫ਼ਾਈਲਾਂ, ਫ਼ੋਟੋਆਂ ਅਤੇ ਈਮੇਲਾਂ ਨੂੰ ਤੁਹਾਡੀ ਸਪੇਸ ਤੋਂ ਬਾਹਰ ਦਿਸਣ ਤੋਂ ਰੋਕਣ ਵਿੱਚ ਮਦਦ ਮਿਲਦੀ ਹੈ"</string>
     <string name="private_space_protected_lock_text" msgid="9123250938334372735"><b>"ਲਾਕ ਸੈੱਟ ਕਰੋ"</b>\n"ਆਪਣੀ ਸਪੇਸ ਨੂੰ ਲਾਕ ਕਰੋ ਤਾਂ ਜੋ ਹੋਰ ਲੋਕਾਂ ਨੂੰ ਇਸਨੂੰ ਖੋਲ੍ਹਣ ਤੋਂ ਰੋਕਿਆ ਜਾ ਸਕੇ"</string>
@@ -611,11 +611,11 @@
     <string name="private_space_retry_summary" msgid="1920444015972648774">"ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਨਾਲ ਵਰਤਣ ਲਈ ਖਾਤੇ ਵਿੱਚ ਸਾਈਨ-ਇਨ ਕਰੋ"</string>
     <string name="private_space_skip_login_label" msgid="7078019409056628192">"ਹਾਲੇ ਨਹੀਂ"</string>
     <string name="private_space_continue_login_label" msgid="7779965766333065391">"ਜਾਰੀ ਰੱਖੋ"</string>
-    <string name="private_space_lock_setup_title" msgid="6541564212199510787">"ਆਪਣੀ ਨਿੱਜੀ ਸਪੇਸ ਲਈ ਲਾਕ ਚੁਣੋ"</string>
+    <string name="private_space_lock_setup_title" msgid="6541564212199510787">"ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲਈ ਲਾਕ ਚੁਣੋ"</string>
     <string name="private_space_lock_setup_description" msgid="423405593476300918">"ਤੁਸੀਂ ਆਪਣੇ ਫਿੰਗਰਪ੍ਰਿੰਟ ਦੀ ਵਰਤੋਂ ਕਰ ਕੇ ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਨੂੰ ਅਣਲਾਕ ਕਰ ਸਕਦੇ ਹੋ। ਸੁਰੱਖਿਆ ਲਈ, ਇਸ ਵਿਕਲਪ ਨੂੰ ਬੈਕਅੱਪ ਲਾਕ ਦੀ ਲੋੜ ਹੈ।"</string>
     <string name="private_space_choose_your_pin_header" msgid="4560802934975898265">"ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲਈ ਪਿੰਨ ਸੈੱਟ ਕਰੋ"</string>
-    <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"ਆਪਣੀ ਨਿੱਜੀ ਸਪੇਸ ਲਈ ਪਾਸਵਰਡ ਸੈੱਟ ਕਰੋ"</string>
-    <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"ਆਪਣੀ ਨਿੱਜੀ ਸਪੇਸ ਲਈ ਪੈਟਰਨ ਸੈੱਟ ਕਰੋ"</string>
+    <string name="private_space_choose_your_password_header" msgid="7660259341095044434">"ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲਈ ਪਾਸਵਰਡ ਸੈੱਟ ਕਰੋ"</string>
+    <string name="private_space_choose_your_pattern_header" msgid="2165607102459936724">"ਆਪਣੀ ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਲਈ ਪੈਟਰਨ ਸੈੱਟ ਕਰੋ"</string>
     <string name="private_space_apps_and_notifications_header" msgid="7493922100321972687">"ਐਪਾਂ ਅਤੇ ਸੂਚਨਾਵਾਂ"</string>
     <string name="private_space_notifications_title" msgid="3456249671149740404">"ਲਾਕ ਸਕ੍ਰੀਨ \'ਤੇ ਸੰਵੇਦਨਸ਼ੀਲ ਸੂਚਨਾਵਾਂ"</string>
     <string name="private_space_sensitive_notifications_description" msgid="1466031201599700985">"ਪ੍ਰਾਈਵੇਟ ਸਪੇਸ ਅਣਲਾਕ ਹੋਣ \'ਤੇ ਸੰਵੇਦਨਸ਼ੀਲ ਸਮੱਗਰੀ ਦਿਖਾਓ"</string>
@@ -1998,7 +1998,7 @@
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"ਰੰਗ ਅਤੇ ਮੋਸ਼ਨ"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"ਰੰਗ ਦਾ ਕੰਟ੍ਰਾਸਟ"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"ਜ਼ਿਆਦਾ ਕੰਟ੍ਰਾਸਟ ਨਾਲ ਲਿਖਤ, ਬਟਨ ਅਤੇ ਪ੍ਰਤੀਕ ਹੋਰ ਵੀ ਵੱਖਰੇ ਨਜ਼ਰ ਆਉਂਦੇ ਹਨ। ਤੁਹਾਨੂੰ ਸਭ ਤੋਂ ਵਧੀਆ ਦਿਸਣ ਵਾਲਾ ਕੰਟ੍ਰਾਸਟ ਚੁਣੋ।"</string>
-    <string name="color_contrast_note" msgid="7592686603372566198">"ਸ਼ਾਇਦ ਕੁਝ ਐਪਾਂ ਸਾਰੀਆਂ ਰੰਗ ਅਤੇ ਲਿਖਤ ਦੀਆਂ ਕੰਟ੍ਰਾਸਟ ਸੈਟਿੰਗਾਂ ਦਾ ਸਮਰਥਨ ਨਾ ਕਰਨ"</string>
+    <string name="color_contrast_note" msgid="7592686603372566198">"ਹੋ ਸਕਦਾ ਹੈ ਕਿ ਕੁਝ ਐਪਾਂ ਸਾਰੀਆਂ ਰੰਗ ਅਤੇ ਲਿਖਤ ਦੀਆਂ ਕੰਟ੍ਰਾਸਟ ਸੈਟਿੰਗਾਂ ਦਾ ਸਮਰਥਨ ਨਾ ਕਰਨ"</string>
     <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"ਵਿਵਸਥਿਤ ਕਰੋ ਕਿ ਰੰਗ ਅਤੇ ਲਿਖਤ ਤੁਹਾਡੀ ਸਕ੍ਰੀਨ ਦੇ ਬੈਕਗ੍ਰਾਊਂਡ ਰੰਗ ਅੱਗੇ ਕਿਵੇਂ ਲੱਗਦੇ ਹਨ"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"ਪੂਰਵ-ਝਲਕ ਦੇਖੋ"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"ਹੈਲਨ, ਐਡਮ"</string>
